--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://manthewell.github.io/CS4610_Final/",
   "name": "firebasechat",
   "private": true,
   "version": "0.0.0",
