--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://manthewell.github.io/CS4610_Final/",
+  "homepage": "https://manthewell.github.io/",
   "name": "firebasechat",
   "private": true,
   "version": "0.0.0",
